Fixed chat table alignment

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -318,7 +318,9 @@ header {
 }
 
 .chat-table {
+  position: relative;
   width: 420px;
+  bottom: 40px;
 }
 
 .user-name {
